sign in with google account

--- a/src/backend/testing/test.ipynb
+++ b/src/backend/testing/test.ipynb
@@ -19,6 +19,25 @@
     "secret_key = secrets.token_urlsafe(32)\n",
     "print(secret_key)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f4172478-37a1-4f93-86fe-10b0a2acf4ca\n"
+     ]
+    }
+   ],
+   "source": [
+    "from uuid import uuid4\n",
+    "\n",
+    "print(uuid4())\n"
+   ]
   }
  ],
  "metadata": {
